Bug-fix: remove `vw` in favor of `%` to eliminate scrollbars.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -467,7 +467,7 @@ video {
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  width: 100vw;
+  width: 100%;
   height: fit-content;
 }
 
